# mcp-sieve

./: .gitignore  CLAUDE.md  GOAL.md  LICENSE  README.md  TASKS.md  config.example.yaml  config.yaml  fastapi-notes-route.md  pyproject.toml  test_transport_env_reconnect.py
scripts/: smoke_test.sh
src/mcp_router/: __init__.py  server.py
