[project]
name = "mcp-router"
version = "0.1.0"
description = "MCP Router/Proxy — semantic tool selection for LLMs"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[project.scripts]
mcp-router = "mcp_router.server:main"

[tool.uv]
package = true