[project]
name = "mcp-sieve"
version = "0.1.0"
description = "MCP Sieve — semantic tool selection proxy for LLMs"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
]

[project.scripts]
mcp-sieve = "mcp_router.server:main"

[tool.uv]
package = true